--- a/Bintangku.WebUI/client/src/app/contents/memberNakes/nakes-card/nakes-card.component.html
+++ b/Bintangku.WebUI/client/src/app/contents/memberNakes/nakes-card/nakes-card.component.html
@@ -11,7 +11,7 @@
       </div>
       <div class="space-x-3 flex items-center">
         <mat-icon class="text-gray-400">account_box</mat-icon>
-        <span class="inline-block text-gray-400">000000</span>
+        <span class="inline-block text-gray-400">{{memberNakes.noStrTenagaKesehatan}}</span>
       </div>
     </div>
   </div>
