--- a/Bintangku.WebUI/client/src/app/contents/memberAnak/dialogs/kpsp/kpsp.component.html
+++ b/Bintangku.WebUI/client/src/app/contents/memberAnak/dialogs/kpsp/kpsp.component.html
@@ -1,97 +1,71 @@
 <h2 mat-dialog-title>Petunjuk KPSP</h2>
 <mat-dialog-content class="mat-typography">
   <!-- KPSP -->
-  <mat-list role="list">
-    <mat-list-item role="listitem"
-      ><li>
-        Pada waktu pemeriksaan/skrining, anak harus dibawa.
-      </li></mat-list-item
-    >
-  </mat-list>
-  <mat-list role="list">
-    <mat-list-item role="listitem"
-      ><li>
-        Tentukan umur anak dengan menanyakan tanggal bulan dan tahun anak lahir.
-        Bila umur anak lebih 16 hari dibulatkan menjadi 1 bulan. Contoh: bayi
-        umur 3 bulan 16 hari, dibulatkan menjadi 4 bulan bila umur bayi 3 bulan
-        15 hari, dibulatkan menjadi 3 bulan.
-      </li></mat-list-item
-    >
-  </mat-list>
-  <mat-list role="list">
-    <mat-list-item role="listitem"
-      ><li>
-        Setelah menentukan umur anak, pilih KPSP yang sesuai dengan umur anak.
-      </li></mat-list-item
-    >
-  </mat-list>
-  <!-- FIXME: Nested list unfinished -->
-  <mat-list role="list">
-    <mat-list-item role="listitem">
-      <li>KPSP terdiri ada 2 macam pertanyaan, yaitu:</li>
-    </mat-list-item>
-    <mat-list role="list">
-      <mat-list-item role="listitem">
+  <ul class="list-outside list-disc px-6">
+    <li>
+      Tentukan umur anak dengan menanyakan tanggal bulan dan tahun anak lahir.
+      Bila umur anak lebih 16 hari dibulatkan menjadi 1 bulan. Contoh: bayi umur
+      3 bulan 16 hari, dibulatkan menjadi 4 bulan bila umur bayi 3 bulan 15
+      hari, dibulatkan menjadi 3 bulan.
+    </li>
+    <li>
+      Setelah menentukan umur anak, pilih KPSP yang sesuai dengan umur anak.
+    </li>
+    <li>Tanyakan tanggal lahir bayi/anak, hitung umur bayi/anak.</li>
+    <li>
+      Hasil pengukuran dicatat pada grafik lingkaran kepala menurut umur dan
+      jenis kelamin anak.
+    </li>
+    <li>
+      Buat garis yang menghubungkan antara ukuran yang lalu dengan ukuran
+      sekarang
+    </li>
+    <li>
+      KPSP terdiri ada 2 macam pertanyaan, yaitu:
+      <ul class="list-outside list-disc px-6">
         <li>
           Pertanyaan yang dijawab oleh ibu/pengasuh anak, contoh: "Dapatkah bayi
           makan kue sendiri ?"
         </li>
-      </mat-list-item>
-      <mat-list-item role="listitem">
         <li>
           Perintah kepada ibu/pengasuh anak atau petugas melaksanakan tugas yang
           tertulis pada KPSP. Contoh: "Pada posisi bayi anda telentang, tariklah
           bayi pada pergelangan tangannya secara perlahan-lahan ke posisi
           duduk''.
         </li>
-      </mat-list-item>
-    </mat-list>
-  </mat-list>
-  <mat-list role="list">
-    <mat-list-item role="listitem"
-      ><li>
-        Jelaskan kepada orangtua agar tidak ragu−ragu atau takut menjawab, oleh
-        karena itu pastikan ibu/pengasuh anak mengerti apa yang ditanyakan
-        kepadanya.
-      </li></mat-list-item
-    >
-  </mat-list>
-  <mat-list role="list">
-    <mat-list-item role="listitem"
-      ><li>
-        Tanyakan pertanyaan tersebut secara berurutan, satu persatu. Setiap
-        pertanyaan hanya ada 1 jawaban, Ya atau Tidak. Catat jawaban tersebut
-        pada formulir.
-      </li></mat-list-item
-    >
-  </mat-list>
-  <mat-list role="list">
-    <mat-list-item role="listitem"
-      ><li>
-        Ajukan pertanyaan yang berikutnya setelah ibu/pengasuh anak menjawab
-        pertanyaan terdahulu.
-      </li></mat-list-item
-    >
-  </mat-list>
-  <mat-list role="list">
-    <mat-list-item role="listitem"
-      ><li>
-        Teliti kembali apakah semua pertanyaan telah dijawab.
-      </li></mat-list-item
-    >
-  </mat-list>
+      </ul>
+    </li>
+    <li>
+      Jelaskan kepada orangtua agar tidak ragu−ragu atau takut menjawab, oleh
+      karena itu pastikan ibu/pengasuh anak mengerti apa yang ditanyakan
+      kepadanya.
+    </li>
+    <li>
+      Tanyakan pertanyaan tersebut secara berurutan, satu persatu. Setiap
+      pertanyaan hanya ada 1 jawaban, Ya atau Tidak. Catat jawaban tersebut pada
+      formulir.
+    </li>
+    <li>
+      Ajukan pertanyaan yang berikutnya setelah ibu/pengasuh anak menjawab
+      pertanyaan terdahulu.
+    </li>
+    <li>Teliti kembali apakah semua pertanyaan telah dijawab.</li>
+  </ul>
+  <br />
   <!-- End - KPSP -->
 
   <!--  -->
-  <h3>Questionnaire</h3>
-  <h3>Bayi Umur 3 Bulan</h3>
-  <h3>Alat dan bahan yang dibutuhkan:</h3>
-  <mat-list role="list">
-    <mat-list-item role="listitem"> <li>Wool Merah</li> </mat-list-item>
-  </mat-list>
+  <p class="text-2xl">Questionnaire</p>
+  <p class="text-2xl">Bayi Umur 3 Bulan</p>
+  <p class="text-2xl">Alat dan bahan yang dibutuhkan:</p>
 
+  <ul class="list-outside list-disc px-6">
+    <li>Wool Merah</li>
+  </ul>
+
+  <br />
   <!-- Wool Merah Table -->
-  <table class="table table-bordered">
+  <table class="border-black">
     <thead>
       <tr>
         <th scope="col">No</th>
@@ -246,7 +220,6 @@
       <tr>
         <th colspan="3" scope="row">Total</th>
         <td></td>
-        <!-- <td></td> -->
       </tr>
     </tbody>
   </table>
