--- a/Bintangku.WebUI/client/src/app/contents/memberAnak/tabs/jadwal-imunisasi-tab/jadwal-imunisasi-tab.component.html
+++ b/Bintangku.WebUI/client/src/app/contents/memberAnak/tabs/jadwal-imunisasi-tab/jadwal-imunisasi-tab.component.html
@@ -5,7 +5,83 @@
   Rekomendasi Ikatan Dokter Anak Indonesia Tahun 2017
 </h2>
 
-<table class="table table-bordered">
+<table class="table-auto" autp>
+  <thead>
+    <tr>
+      <th class="px-4 py-2 text-blue-600">Title</th>
+      <th class="px-4 py-2 text-blue-600">Author</th>
+      <th class="px-4 py-2 text-blue-600">Views</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td class="border border-blue-500 px-4 py-2 text-blue-600 font-medium">
+        Intro to CSS
+      </td>
+      <td class="border border-blue-500 px-4 py-2 text-blue-600 font-medium">
+        Adam
+      </td>
+      <td class="border border-blue-500 px-4 py-2 text-blue-600 font-medium">
+        858
+      </td>
+    </tr>
+    <tr class="bg-blue-200">
+      <td class="border border-blue-500 px-4 py-2 text-blue-600 font-medium">
+        A Long and Winding Tour of the History of UI Frameworks and Tools and
+        the Impact on Design
+      </td>
+      <td class="border border-blue-500 px-4 py-2 text-blue-600 font-medium">
+        Adam
+      </td>
+      <td class="border border-blue-500 px-4 py-2 text-blue-600 font-medium">
+        112
+      </td>
+    </tr>
+    <tr>
+      <td class="border border-blue-500 px-4 py-2 text-blue-600 font-medium">
+        Intro to JavaScript
+      </td>
+      <td class="border border-blue-500 px-4 py-2 text-blue-600 font-medium">
+        Chris
+      </td>
+      <td class="border border-blue-500 px-4 py-2 text-blue-600 font-medium">
+        1,280
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+<!-- <table class="table">
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Author</th>
+      <th>Views</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Intro to CSS</td>
+      <td>Adam</td>
+      <td>858</td>
+    </tr>
+    <tr class="bg-emerald-200">
+      <td>
+        A Long and Winding Tour of the History of UI Frameworks and Tools and
+        the Impact on Design
+      </td>
+      <td>Adam</td>
+      <td>112</td>
+    </tr>
+    <tr>
+      <td>Intro to JavaScript</td>
+      <td>Chris</td>
+      <td>1,280</td>
+    </tr>
+  </tbody>
+</table> -->
+
+<!-- <table>
   <thead>
     <tr>
       <th scope="col">Imunisasi</th>
@@ -20,9 +96,6 @@
   <tbody>
     <tr>
       <th scope="row">Hepatitis B</th>
-      <!-- <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td> -->
     </tr>
     <tr>
       <th scope="row">Polio</th>
@@ -96,4 +169,4 @@
       <td>@twitter</td>
     </tr>
   </tbody>
-</table>
+</table> -->
