--- a/Bintangku.WebUI/client/src/app/contents/memberAnak/tabs/kesehatan-tab/kesehatan-tab.component.html
+++ b/Bintangku.WebUI/client/src/app/contents/memberAnak/tabs/kesehatan-tab/kesehatan-tab.component.html
@@ -1,7 +1,7 @@
 <table class="table">
   <tbody>
     <tr>
-      <th scope="col">Lingkar Kepala</th>
+      <th scope="col">Lingkar Leher</th>
       <th scope="col">
         <button
           mat-raised-button
