--- a/Bintangku.WebUI/client/src/app/contents/home/home.component.html
+++ b/Bintangku.WebUI/client/src/app/contents/home/home.component.html
@@ -1,46 +1,67 @@
 <div class="row">
-  <div class="col-sm-8">
-
-  </div>
+  <div class="col-sm-8"></div>
 </div>
 <div class="py-16 my-6">
   <section id="hero-component" class="my-6 relative py-16">
     <div class="xl:container mx-auto py-7 my-16 px-7">
       <div class="max-w-sm mr-auto">
         <h1 class="mat-headline">
-          Menjadikan Indonesia <span class="font-bold text-blue-700">Sehat</span>
+          Menjadikan Indonesia
+          <span class="font-bold text-blue-700">Sehat</span>
         </h1>
         <div class="mat-body">
           <p class="opacity-60">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Semper nulla duis eu gravida augue massa nibh.
+            Memastikan anak-anak Indonesia memiliki akses terhadap pelayanan
+            kesehatan sehingga mencapai tumbuh kembang yang optimal
+          </p>
+          <p class="opacity-60">
+            Mentransformasi ekosistem pelayanan kesehatan anak untuk mendukung
+            generasi penerus bangsa bertumbuh dan berkembang dengan baik
           </p>
         </div>
       </div>
       <div class="flex relative justify-between">
         <div class="inline-flex items-center flex-col">
           <div class="w-0.5 bg-blue-500 h-24"></div>
-          <button mat-fab color="primary" title="Lihat Lebih Lanjut" aria-label="Lihat Lebih Lanjut">
+          <button
+            mat-fab
+            color="primary"
+            title="Lihat Lebih Lanjut"
+            aria-label="Lihat Lebih Lanjut"
+          >
             <mat-icon>arrow_downward</mat-icon>
           </button>
         </div>
         <div class="inline-flex">
-          <div class="flex absolute right-0" style="top: -88px;">
+          <div class="flex absolute right-0" style="top: -88px">
             <div class="pt-11 mr-3 self-start">
-              <div class="rounded-xl mt-11 overflow-hidden flex bg-yellow-400" style="width:259px;height:190px;">
-                <img src="/assets/images/home-img-2.jpg" alt="">
+              <div
+                class="rounded-xl mt-11 overflow-hidden flex bg-yellow-400"
+                style="width: 259px; height: 190px"
+              >
+                <img src="/assets/images/home-img-2.jpg" alt="" />
               </div>
             </div>
-            <div class="rounded-xl mr-3 overflow-hidden bg-green-300" style="width:170px;height:239px;">
-              <img src="/assets/images/home-img-3.jpg" alt="">
+            <div
+              class="rounded-xl mr-3 overflow-hidden bg-green-300"
+              style="width: 170px; height: 239px"
+            >
+              <img src="/assets/images/home-img-3.jpg" alt="" />
             </div>
             <div class="pt-11 mr-3 self-start">
-              <div class="rounded-xl mt-11 overflow-hidden flex bg-green-700" style="width:167px;height:244px;">
-                <img src="/assets/images/home-img-4.jpg" alt="">
+              <div
+                class="rounded-xl mt-11 overflow-hidden flex bg-green-700"
+                style="width: 167px; height: 244px"
+              >
+                <img src="/assets/images/home-img-4.jpg" alt="" />
               </div>
             </div>
             <div class="pt-11 self-start">
-              <div class="rounded-xl mt-11 overflow-hidden bg-blue-300" style="width:261px;height:153px;">
-                <img src="/assets/images/home-img-7.jpg" alt="">
+              <div
+                class="rounded-xl mt-11 overflow-hidden bg-blue-300"
+                style="width: 261px; height: 153px"
+              >
+                <img src="/assets/images/home-img-7.jpg" alt="" />
               </div>
             </div>
           </div>
@@ -48,10 +69,21 @@
       </div>
     </div>
     <div class="absolute bottom-0">
-      <svg width="418" height="124" viewBox="0 0 418 124" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path opacity="0.4"
+      <svg
+        width="418"
+        height="124"
+        viewBox="0 0 418 124"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          opacity="0.4"
           d="M0 94.1845C12.1362 91.9634 23.9843 90.2747 36.0564 93.7923C47.5752 97.1486 57.042 103.689 67.584 108.735C87.3037 118.174 116.738 130.817 137.781 116.657C148.075 109.73 154.928 97.3909 155.548 85.87C156.301 71.8798 145.013 65.028 130.552 65.8683C116.368 66.6925 103.431 78.5401 102.247 91.047C101.748 96.3208 104.213 102.787 107.995 106.813C114.199 113.417 129.131 110.175 136.692 107.48C145.345 104.395 152.16 98.4252 158.814 92.8118C170.297 83.124 186.21 78.2524 200.618 73.2023C214.758 68.246 228.928 63.2973 243.86 60.613C255.304 58.5555 267.464 56.6815 279.176 57.6715C292.888 58.8307 305.811 63.3319 318.672 67.4371C336.174 73.0235 352.816 75.5597 370.231 67.2018C382.687 61.224 391.773 51.1209 399.102 40.5328C402.096 36.2087 404.854 31.738 407.246 27.1199C419.628 3.20722 407.062 24.1899 417 1"
-          stroke="#66CBFF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+          stroke="#66CBFF"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        />
       </svg>
     </div>
   </section>
@@ -59,46 +91,65 @@
     <div class="xl:container mx-auto py-7 my-16 px-7">
       <p class="mat-body accent-heading">Visi Kami</p>
       <div class="relative">
-        <h2 class="w-64 mat-headline">
-          Demi Anak Bangsa yang Lebih Baik
-        </h2>
+        <h2 class="w-64 mat-headline">Demi Anak Bangsa yang Lebih Baik</h2>
         <div class="misi-content">
           <p class="mat-body text-justify opacity-60">
-            Dalam era globalisasi dan kemajuan teknologi yang semakin baik, diperlukan sebuah usaha untuk meningkatkan
-            pemantauan tumbuh kembang, nutrisi, dan imunisasi anak sehingga pelayanan kesehatan dapat maksimal. Kami
-            melakukan pengembangan website dan aplikasi Android yang komprehensif dan mudah digunakan untuk membantu
-            tenaga medis dan non medis dalam melakukan input dan analisa data kesehatan anak suatu komunitas (posyandu,
-            puskesmas, atau day care) di seluruh Indonesia, sehingga setiap anak dapat dipantau dengan mudah dan baik.
+            Dalam era globalisasi dan kemajuan teknologi yang semakin baik,
+            diperlukan sebuah usaha untuk meningkatkan pemantauan tumbuh
+            kembang, nutrisi, dan imunisasi anak sehingga pelayanan kesehatan
+            dapat maksimal. Kami melakukan pengembangan website dan aplikasi
+            Android yang komprehensif dan mudah digunakan untuk membantu tenaga
+            medis dan non medis dalam melakukan input dan analisa data kesehatan
+            anak suatu komunitas (posyandu, puskesmas, atau day care) di seluruh
+            Indonesia, sehingga setiap anak dapat dipantau dengan mudah dan
+            baik.
           </p>
         </div>
         <div class="misi-img bg-red-400 overflow-hidden">
-          <img src="/assets/images/home-img-5.jpg" alt="">
+          <img src="/assets/images/home-img-5.jpg" alt="" />
         </div>
       </div>
     </div>
   </section>
   <section id="layanan-kami" class="my-6 py-16">
     <div
-      class="xl:container mx-auto rounded-xl bg-blue-100 bg-opacity-20 border border-solid border-blue-100 py-7 my-16 px-7">
+      class="
+        xl:container
+        mx-auto
+        rounded-xl
+        bg-blue-100 bg-opacity-20
+        border border-solid border-blue-100
+        py-7
+        my-16
+        px-7
+      "
+    >
       <div class="flex justify-end">
         <p class="mat-body accent-heading">Layanan Kami</p>
       </div>
       <div class="flex">
         <div class="w-2/3">
           <div app-grid [container]="true" spacing="4">
-            <div app-grid [item]="true" xs="6" *ngFor="let item of [1,2,3,4]">
+            <div app-grid [item]="true" xs="6" *ngFor="let item of items">
               <div class="flex">
-                <div class="rounded-xl flex-1 w-full h-20 border border-solid border-blue-100">
+                <div
+                  class="
+                    rounded-xl
+                    flex-1
+                    w-full
+                    h-20
+                    border border-solid border-blue-100
+                  "
+                >
                   <div class="w-20"></div>
                 </div>
                 <div class="pl-7">
                   <div class="mat-typography">
                     <h3 class="text-blue-700 font-bold">
-                      Cara {{item}}
+                      Cara {{ item.title }}
                     </h3>
                     <p class="opacity-60 text-justify">
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cursus odio a nulla tristique lacus. Quam
-                      dignissim vel, senectus quis amet ante nisl felis, purus.
+                      {{ item.desc }}
                     </p>
                   </div>
                 </div>
@@ -107,9 +158,7 @@
           </div>
         </div>
         <div class="w-1/3">
-          <h2 class="w-64 ml-auto mat-headline">
-            Bagaimana kami bekerja?
-          </h2>
+          <h2 class="w-64 ml-auto mat-headline">Nilai yang kami berikan</h2>
         </div>
       </div>
     </div>
@@ -119,39 +168,86 @@
       <p class="mat-body accent-heading">Tentang Kami</p>
       <div app-grid container="true" spacing="3">
         <div app-grid item="true" md="true">
-          <h2 class="w-64 mat-headline">
-            Dirancang dengan penuh dedikasi
-          </h2>
+          <h2 class="w-64 mat-headline">Dirancang dengan penuh dedikasi</h2>
           <p class="mat-body opacity-60">Temui tim hebat dibalik Bintangku</p>
         </div>
         <div app-grid item="true" md="8">
           <div app-grid container="true" spacing="3">
             <div app-grid item="true" md="3">
-              <div class="overflow-hidden mb-3 hover:shadow-md hover:scale-105 transform transition rounded-xl">
-                <img src="/assets/images/home-img-8.jpg" alt="">
+              <div
+                class="
+                  overflow-hidden
+                  mb-3
+                  hover:shadow-md hover:scale-105
+                  transform
+                  transition
+                  rounded-xl
+                "
+              >
+                <img src="/assets/images/home-img-8.jpg" alt="" />
               </div>
-              <p class="text-blue-500 mat-body font-bold capitalize">nama lengkap</p>
+              <p class="text-blue-500 mat-body font-bold capitalize">
+                nama lengkap
+              </p>
               <p class="mat-body opacity-60 capitalize">nama jabata</p>
             </div>
             <div app-grid item="true" md="3">
-              <div class="overflow-hidden mb-3 hover:shadow-md hover:scale-105 transform transition max-h-44 rounded-xl">
-                <img style="margin-top: -55px;" src="/assets/images/home-img-6.jpg" alt="">
+              <div
+                class="
+                  overflow-hidden
+                  mb-3
+                  hover:shadow-md hover:scale-105
+                  transform
+                  transition
+                  max-h-44
+                  rounded-xl
+                "
+              >
+                <img
+                  style="margin-top: -55px"
+                  src="/assets/images/home-img-6.jpg"
+                  alt=""
+                />
               </div>
-              <p class="text-blue-500 mat-body font-bold capitalize">nama lengkap</p>
+              <p class="text-blue-500 mat-body font-bold capitalize">
+                nama lengkap
+              </p>
               <p class="mat-body opacity-60 capitalize">nama jabata</p>
             </div>
             <div app-grid item="true" md="3">
-              <div class="overflow-hidden mb-3 hover:shadow-md hover:scale-105 transform transition rounded-xl">
-                <img src="/assets/images/home-img-10.jpg" alt="">
+              <div
+                class="
+                  overflow-hidden
+                  mb-3
+                  hover:shadow-md hover:scale-105
+                  transform
+                  transition
+                  rounded-xl
+                "
+              >
+                <img src="/assets/images/home-img-10.jpg" alt="" />
               </div>
-              <p class="text-blue-500 mat-body font-bold capitalize">nama lengkap</p>
+              <p class="text-blue-500 mat-body font-bold capitalize">
+                nama lengkap
+              </p>
               <p class="mat-body opacity-60 capitalize">nama jabata</p>
             </div>
             <div app-grid item="true" md="3">
-              <div class="overflow-hidden mb-3 hover:shadow-md hover:scale-105 transform transition rounded-xl">
-                <img src="/assets/images/home-img-9.jpg" alt="">
+              <div
+                class="
+                  overflow-hidden
+                  mb-3
+                  hover:shadow-md hover:scale-105
+                  transform
+                  transition
+                  rounded-xl
+                "
+              >
+                <img src="/assets/images/home-img-9.jpg" alt="" />
               </div>
-              <p class="text-blue-500 mat-body font-bold capitalize">nama lengkap</p>
+              <p class="text-blue-500 mat-body font-bold capitalize">
+                nama lengkap
+              </p>
               <p class="mat-body opacity-60 capitalize">nama jabata</p>
             </div>
           </div>
@@ -161,37 +257,75 @@
   </section>
   <section id="ayo-gabung" class="my-6 py-16">
     <div
-      class="xl:container bg-blue-100 relative bg-opacity-20 border border-solid border-blue-100 rounded-xl bg- mx-auto py-12 px-12">
+      class="
+        xl:container
+        bg-blue-100
+        relative
+        bg-opacity-20
+        border border-solid border-blue-100
+        rounded-xl
+        bg-
+        mx-auto
+        py-12
+        px-12
+      "
+    >
       <div app-grid container="true">
         <div app-grid class="mat-typography" item="true" xs="4">
           <h2 class="mat-headline">
-            Ayo, wujudkan <br> Indonesia Sehat
+            Ayo, wujudkan <br />
+            Indonesia Sehat
           </h2>
           <p class="opacity-60">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Senectus posuere id eu id ornare purus egestas
-            malesuada quis. Praesent purus rhoncus turpis enim, nibh orci at scelerisque enim.
+            Dukung inisiatif kami untuk membawa perubahan terhadap pelayanan
+            kesehatan anak dengan cara berdonasi dengan menekan link di bawah
+            ini:
           </p>
-          <a [routerLink]="['/register']" mat-raised-button color="primary" class="btn-auth"
-            routerLinkActive="router-link-active">
+          <a
+            [routerLink]="['/register']"
+            mat-raised-button
+            color="primary"
+            class="btn-auth"
+            routerLinkActive="router-link-active"
+          >
             gabung sekarang
           </a>
           <p></p>
           <p>
-            Sudah bergabung? <a class="text-blue-500 hover:text-blue-700" [routerLink]="['/login']">Login</a>
+            Sudah bergabung?
+            <a
+              class="text-blue-500 hover:text-blue-700"
+              [routerLink]="['/login']"
+              >Login</a
+            >
           </p>
         </div>
         <div app-grid item="true" xs="2">
           <div class="absolute top-0">
-            <svg width="299" height="336" viewBox="0 0 299 336" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path opacity="0.5"
+            <svg
+              width="299"
+              height="336"
+              viewBox="0 0 299 336"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                opacity="0.5"
                 d="M41.859 1C14.7858 40.1757 -2.73023 83.5594 1.67785 126.474C3.66011 145.773 17.4429 167.922 44.675 178.988C64.3491 186.982 81.5688 185.098 101.427 177.859C123.045 169.979 144.035 160.134 162.078 149.378C168.039 145.825 174.555 141.569 174.208 136.034C173.788 129.347 164.868 128.006 157.529 132.25C141.737 141.382 132.767 158.587 134.893 171.618C138.354 192.832 159.607 211.809 183.955 226.323C204.445 238.536 231.173 246.318 249.372 260.048C262.063 269.623 270.335 289.527 265.184 301.913C260.141 314.04 247.102 328.736 226.086 332.717C212.294 335.33 195.002 336.163 189.371 332.717C181.347 327.807 177.962 318.311 189.371 310.61C205.749 299.554 226.877 291.431 246.881 283.125C270.087 273.489 279.302 254.686 287.495 238.073C295.081 222.693 299.405 211.658 297.586 192.737"
-                stroke="#66CBFF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                stroke="#66CBFF"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
             </svg>
           </div>
-
         </div>
         <div app-grid item="true" xs="3">
-          <img src="/assets/images/home-img-1.jpg" style="width: 412px; top: -119px; height: 312px;" class="rounded-xl overflow-hidden absolute bg-blue-100">
+          <img
+            src="/assets/images/home-img-1.jpg"
+            style="width: 412px; top: -119px; height: 312px"
+            class="rounded-xl overflow-hidden absolute bg-blue-100"
+          />
         </div>
       </div>
     </div>
