--- a/Bintangku.WebUI/client/src/app/contents/memberAnak/anak-pemeriksaan/anak-pemeriksaan.component.html
+++ b/Bintangku.WebUI/client/src/app/contents/memberAnak/anak-pemeriksaan/anak-pemeriksaan.component.html
@@ -1,11 +1,14 @@
-<table mat-table
-       [dataSource]="dataSource" multiTemplateDataRows
-       class="mat-elevation-z8">
+<table
+  mat-table
+  [dataSource]="dataSource"
+  multiTemplateDataRows
+  class="mat-elevation-z8"
+>
   <!-- <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay">
     <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
   </ng-container> -->
   <ng-container matColumnDef="name">
-    <td mat-cell *matCellDef="let element"> {{element['name']}} </td>
+    <td mat-cell *matCellDef="let element">{{ element["name"] }}</td>
   </ng-container>
   <ng-container matColumnDef="position">
     <td mat-cell *matCellDef="let element">
@@ -13,38 +16,77 @@
         TAMBAHKAN &nbsp;<mat-icon svgIcon="pencil-add"></mat-icon>
       </button>
       <button
-      (click)="expandedElement = expandedElement === element ? null : element" mat-button>
-        {{ expandedElement === element ?"TUTUP":"SELENGKAPNYA" }} <mat-icon>{{ expandedElement === element ? "expand_less":"expand_more" }}</mat-icon>
+        (click)="expandedElement = expandedElement === element ? null : element"
+        mat-button
+      >
+        {{ expandedElement === element ? "TUTUP" : "SELENGKAPNYA" }}
+        <mat-icon>{{
+          expandedElement === element ? "expand_less" : "expand_more"
+        }}</mat-icon>
       </button>
     </td>
   </ng-container>
 
   <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
   <ng-container matColumnDef="expandedDetail">
-    <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
-      <div class="example-element-detail"
-           [@detailExpand]="element === expandedElement ? 'expanded' : 'collapsed'">
-           <table mat-table *ngIf="element === expandedElement && !loading" [dataSource]="detail[element.position].dataSource">
-            <ng-container matColumnDef="{{column}}" *ngFor="let column of detail[element.position].columnsToDisplay">
-              <th mat-header-cell class="text-blue-700 font-bold" *matHeaderCellDef> {{detail[element.position].stringDisplay[column]}} </th>
-              <td mat-cell *matCellDef="let element;let index = index"> {{ column === 'no' ? (index + 1):element[column]}} </td>
-            </ng-container>
-            <tr mat-header-row *matHeaderRowDef="detail[element.position].columnsToDisplay"></tr>
-            <tr mat-row class="no-border-last" *matRowDef="let row; columns: detail[element.position].columnsToDisplay;"></tr>
-           </table>
+    <td
+      mat-cell
+      *matCellDef="let element"
+      [attr.colspan]="columnsToDisplay.length"
+    >
+      <div
+        class="example-element-detail"
+        [@detailExpand]="element === expandedElement ? 'expanded' : 'collapsed'"
+      >
+        <table
+          mat-table
+          *ngIf="element === expandedElement && !loading"
+          [dataSource]="detail[element.position].dataSource"
+        >
+          <ng-container
+            matColumnDef="{{ column }}"
+            *ngFor="let column of detail[element.position].columnsToDisplay"
+          >
+            <th
+              mat-header-cell
+              class="text-blue-700 font-bold"
+              *matHeaderCellDef
+            >
+              {{ detail[element.position].stringDisplay[column] }}
+            </th>
+            <td mat-cell *matCellDef="let element; let index = index">
+              {{ column === "no" ? index + 1 : element[column] }}
+            </td>
+          </ng-container>
+          <tr
+            mat-header-row
+            *matHeaderRowDef="detail[element.position].columnsToDisplay"
+          ></tr>
+          <tr
+            mat-row
+            class="no-border-last"
+            *matRowDef="
+              let row;
+              columns: detail[element.position].columnsToDisplay
+            "
+          ></tr>
+        </table>
       </div>
     </td>
   </ng-container>
 
-
-  <tr mat-row *matRowDef="let element; columns: columnsToDisplay;"
-      class="example-element-row"
-      [class.example-expanded-row]="expandedElement === element"
-      >
-  </tr>
-  <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+  <tr
+    mat-row
+    *matRowDef="let element; columns: columnsToDisplay"
+    class="example-element-row"
+    [class.example-expanded-row]="expandedElement === element"
+  ></tr>
+  <tr
+    mat-row
+    *matRowDef="let row; columns: ['expandedDetail']"
+    class="example-detail-row"
+  ></tr>
 </table>
-
 
 <!-- Copyright 2021 Google LLC. All Rights Reserved.
     Use of this source code is governed by an MIT-style license that
