--- a/Bintangku.WebUI/client/src/app/contents/memberAnak/anak/anak.component.html
+++ b/Bintangku.WebUI/client/src/app/contents/memberAnak/anak/anak.component.html
@@ -1,17 +1,30 @@
 <section class="my-6 relative h-full py-16">
-  <div class="xl:container mx-auto py-7 my-16 px-7">
+  <div class="xl:container mx-auto py-3 my-16 px-7">
+    <!--  -->
     <div class="mb-4">
-      <h3 class="h3-accent">
-        Data Anak
-      </h3>
-      <span class="mat-body text-black text-opacity-50">3 orang</span>
+      <h3 class="h3-accent">Data Anak</h3>
+      <span class="mat-body text-black text-opacity-50">
+        {{ memberAnaks?.length }} orang</span
+      >
     </div>
     <div class="flex space-x-4 mb-9">
       <button mat-button>Filter<mat-icon>filter_alt</mat-icon></button>
       <div class="w-64">
         <mat-select
-          class="py-2 px-4 bg-blue-100 bg-opacity-10 ring-blue-100 border-blue-100 h-full border text-gray-500 sm:text-sm rounded-full"
-          [(value)]="selected">
+          class="
+            py-2
+            px-4
+            bg-blue-100 bg-opacity-10
+            ring-blue-100
+            border-blue-100
+            h-full
+            border
+            text-gray-500
+            sm:text-sm
+            rounded-full
+          "
+          [(value)]="selected"
+        >
           <mat-option>None</mat-option>
           <mat-option value="1">Jadwal Vaksin Hari Ini</mat-option>
           <mat-option value="2">Anak Dalam Pemantauan</mat-option>
@@ -20,8 +33,20 @@
       </div>
       <div class="w-64">
         <mat-select
-          class="py-2 px-4 bg-blue-100 bg-opacity-10 ring-blue-100 border-blue-100 h-full border text-gray-500 sm:text-sm rounded-full"
-          [(value)]="selected">
+          class="
+            py-2
+            px-4
+            bg-blue-100 bg-opacity-10
+            ring-blue-100
+            border-blue-100
+            h-full
+            border
+            text-gray-500
+            sm:text-sm
+            rounded-full
+          "
+          [(value)]="selected"
+        >
           <mat-option>None</mat-option>
           <mat-option value="1">Jadwal Vaksin Hari Ini</mat-option>
           <mat-option value="2">Anak Dalam Pemantauan</mat-option>
@@ -30,107 +55,187 @@
       </div>
       <div class="w-64">
         <mat-select
-          class="py-2 px-4 bg-blue-100 bg-opacity-10 ring-blue-100 border-blue-100 h-full border text-gray-500 sm:text-sm rounded-full"
-          [(value)]="selected">
+          class="
+            py-2
+            px-4
+            bg-blue-100 bg-opacity-10
+            ring-blue-100
+            border-blue-100
+            h-full
+            border
+            text-gray-500
+            sm:text-sm
+            rounded-full
+          "
+          [(value)]="selected"
+        >
           <mat-option>None</mat-option>
           <mat-option value="1">Jadwal Vaksin Hari Ini</mat-option>
           <mat-option value="2">Anak Dalam Pemantauan</mat-option>
           <mat-option value="3">Rujuk Ke Dokter Anak</mat-option>
         </mat-select>
       </div>
-
     </div>
     <div class="flex justify-end pt-9 mb-9">
-      <div class="relative border w-96 bg-blue-100 bg-opacity-10 px-12 py-2 sm:text-sm border-blue-100 rounded-xl shadow-sm">
-        <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
+      <div
+        class="
+          relative
+          border
+          w-96
+          bg-blue-100 bg-opacity-10
+          px-12
+          py-2
+          sm:text-sm
+          border-blue-100
+          rounded-xl
+          shadow-sm
+        "
+      >
+        <div
+          class="
+            absolute
+            inset-y-0
+            left-0
+            pl-3
+            flex
+            items-center
+            pointer-events-none
+          "
+        >
           <label for="search" class="text-gray-500 flex sm:text-sm">
             <mat-icon>search</mat-icon>
           </label>
         </div>
-        <input name="search" id="search" class="rounded-xl" matInput placeholder="Ex. Pizza" value="Sushi">
+        <input
+          name="search"
+          id="search"
+          class="rounded-xl"
+          matInput
+          placeholder="Ex. Pizza"
+          value="Sushi"
+        />
       </div>
       <div>
-        <button mat-button>
-          REFRESH <mat-icon>refresh</mat-icon>
-        </button>
-        <button mat-button>
+        <button mat-button>REFRESH <mat-icon>refresh</mat-icon></button>
+        <button mat-button routerLink="/anak-member/add">
           TAMBAH <mat-icon>add</mat-icon>
         </button>
       </div>
     </div>
+    <!--  -->
+
+    <!-- List Data Anak -->
     <table mat-table [dataSource]="memberAnaks">
       <ng-container matColumnDef="nama">
-        <th mat-header-cell *matHeaderCellDef> <span class="text-blue-700 font-bold">Nama</span> </th>
+        <th id="nama" mat-header-cell *matHeaderCellDef>
+          <span class="text-blue-700 font-bold">Nama</span>
+        </th>
         <td mat-cell *matCellDef="let element">
           <div class="flex items-center justify-center space-x-4">
-            <div class="rounded-full h-11 w-11 overflow-hidden inline-flex justify-center items-center">
-              <img src="https://randomuser.me/api/portraits/women/54.jpg"
-                class="text-transparent object-cover text-center" alt="">
+            <div
+              class="
+                rounded-full
+                h-11
+                w-11
+                overflow-hidden
+                inline-flex
+                justify-center
+                items-center
+              "
+            >
+              <img
+                src="{{ element.imagePath }}"
+                class="text-transparent object-cover text-center"
+                alt=""
+              />
             </div>
-            <p>{{element.namaLengkap}}</p>
+            <p>{{ element.namaLengkap }}</p>
           </div>
         </td>
       </ng-container>
 
       <!-- Name Column -->
       <ng-container matColumnDef="nik">
-        <th mat-header-cell *matHeaderCellDef> <span class="text-blue-700 font-bold">NIK</span> </th>
-        <td mat-cell *matCellDef="let element"> {{element.nik}} </td>
+        <th id="nik" mat-header-cell *matHeaderCellDef>
+          <span class="text-blue-700 font-bold">NIK</span>
+        </th>
+        <td mat-cell *matCellDef="let element">{{ element.nik }}</td>
       </ng-container>
 
       <!-- Weight Column -->
       <ng-container matColumnDef="kelamin">
-        <th mat-header-cell *matHeaderCellDef> <span class="text-blue-700 font-bold">Jenis Kelamin</span> </th>
-        <td mat-cell *matCellDef="let element"> {{element.jenisKelaminAnak}} </td>
+        <th id="kelamin" mat-header-cell *matHeaderCellDef>
+          <span class="text-blue-700 font-bold">Jenis Kelamin</span>
+        </th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.jenisKelaminAnak }}
+        </td>
       </ng-container>
 
       <!-- Symbol Column -->
       <ng-container matColumnDef="ttl">
-        <th mat-header-cell *matHeaderCellDef> <span class="text-blue-700 font-bold">Tempat Tanggal Lahir</span> </th>
-        <td mat-cell *matCellDef="let element"> {{element.tanggalLahirAnak | date}} </td>
+        <th id="ttl" mat-header-cell *matHeaderCellDef>
+          <span class="text-blue-700 font-bold">Tempat Tanggal Lahir</span>
+        </th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.tanggalLahirAnak | date }}
+        </td>
       </ng-container>
       <!-- Symbol Column -->
       <ng-container matColumnDef="nama_ayah">
-        <th mat-header-cell *matHeaderCellDef> <span class="text-blue-700 font-bold">Nama Ayah</span> </th>
-        <td mat-cell *matCellDef="let element"> nama ayah </td>
+        <th id="nama-ayah" mat-header-cell *matHeaderCellDef>
+          <span class="text-blue-700 font-bold">Nama Ayah</span>
+        </th>
+        <td mat-cell *matCellDef="let element">{{ element.namaAyah }}</td>
       </ng-container>
       <!-- Symbol Column -->
       <ng-container matColumnDef="nama_ibu">
-        <th mat-header-cell *matHeaderCellDef> <span class="text-blue-700 font-bold">Nama Ibu</span> </th>
-        <td mat-cell *matCellDef="let element"> nama ibu </td>
+        <th id="nama-ibu" mat-header-cell *matHeaderCellDef>
+          <span class="text-blue-700 font-bold">Nama Ibu</span>
+        </th>
+        <td mat-cell *matCellDef="let element">{{ element.namaIbu }}</td>
       </ng-container>
       <!-- Symbol Column -->
       <ng-container matColumnDef="pengimput">
-        <th mat-header-cell *matHeaderCellDef> <span class="text-blue-700 font-bold">penginput</span> </th>
-        <td mat-cell *matCellDef="let element"> {{element.namaNakes}} </td>
+        <th id="penginput" mat-header-cell *matHeaderCellDef>
+          <span class="text-blue-700 font-bold">penginput</span>
+        </th>
+        <td mat-cell *matCellDef="let element">{{ element.namaNakes }}</td>
       </ng-container>
       <!-- Symbol Column -->
       <ng-container matColumnDef="aksi">
-        <th mat-header-cell *matHeaderCellDef> <span class="text-blue-700 font-bold">aksi</span> </th>
+        <th id="aksi" mat-header-cell *matHeaderCellDef>
+          <span class="text-blue-700 font-bold">aksi</span>
+        </th>
         <td mat-cell *matCellDef="let element">
-          <button class="text-blue-700" mat-icon-button aria-label="Example icon button with a vertical three dot icon">
+          <button
+            class="text-blue-700"
+            mat-icon-button
+            aria-label="Example icon button with a vertical three dot icon"
+          >
             <mat-icon>delete</mat-icon>
           </button>
-          <button class="text-blue-700" mat-icon-button aria-label="Example icon button with a vertical three dot icon">
-            <mat-icon>edit</mat-icon>
+          <button
+            class="text-blue-700"
+            mat-icon-button
+            aria-label="Example icon button with a vertical three dot icon"
+          >
+            <mat-icon
+              routerLink="/anak-members/{{ element.id }}"
+              routerLinkActive="router-link-active"
+              >edit</mat-icon
+            >
           </button>
         </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="anakColumns"></tr>
-      <tr mat-row
+      <tr
+        mat-row
         (click)="clickRow(row)"
-        *matRowDef="let row; columns: anakColumns;"></tr>
+        *matRowDef="let row; columns: anakColumns"
+      ></tr>
     </table>
     <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
   </div>
 </section>
-
-<!-- <div style="background-color:red;padding: 8px 16px; border-radius: 12px">
-  <mat-select [(value)]="selected">
-    <mat-option>None</mat-option>
-    <mat-option value="option1">Option 1</mat-option>
-    <mat-option value="option2">Option 2</mat-option>
-    <mat-option value="option3">Option 3</mat-option>
-  </mat-select>
-</div> -->
