--- a/Bintangku.WebUI/client/src/app/contents/memberAnak/tabs/jadwal-imunisasi-tab/jadwal-imunisasi-tab.component.html
+++ b/Bintangku.WebUI/client/src/app/contents/memberAnak/tabs/jadwal-imunisasi-tab/jadwal-imunisasi-tab.component.html
@@ -1,99 +1,90 @@
-<h2 style="text-align: center; margin-top: 18px" class="h2">
-  Jadwal Imunisasi Anak Usia 0-18 Tahun
-</h2>
-<h2 style="text-align: center; margin-top: -10px" class="h2">
-  Rekomendasi Ikatan Dokter Anak Indonesia Tahun 2017
-</h2>
+<div class="w-full overflow-x-auto">
+  <table class="table-auto">
+    <thead>
+      <tr>
+        <th rowspan="4" class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600">Imunisasi</th>
+      </tr>
+      <tr>
+        <th colspan="21" class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600">Usia</th>
+      </tr>
+      <tr>
+        <th colspan="12" class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600">Bulan</th>
+        <th colspan="9" class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600">Tahun</th>
+      </tr>
+      <tr>
+        <th class="px-4 border border-blue-500 py-2 text-blue-600">Lahir</th>
+        <th class="px-4 border border-blue-500 py-2 text-blue-600">1</th>
+        <th class="px-4 border border-blue-500 py-2 text-blue-600">2</th>
+        <th class="px-4 border border-blue-500 py-2 text-blue-600">3</th>
+        <th class="px-4 border border-blue-500 py-2 text-blue-600">4</th>
+        <th class="px-4 border border-blue-500 py-2 text-blue-600">5</th>
+        <th class="px-4 border border-blue-500 py-2 text-blue-600">6</th>
+        <th class="px-4 border border-blue-500 py-2 text-blue-600">9</th>
+        <th class="px-4 border border-blue-500 py-2 text-blue-600">12</th>
+        <th class="px-4 border border-blue-500 py-2 text-blue-600">15</th>
+        <th class="px-4 border border-blue-500 py-2 text-blue-600">18</th>
+        <th class="px-4 border border-blue-500 py-2 text-blue-600">24</th>
 
-<table class="table table-bordered">
-  <thead>
-    <tr>
-      <th scope="col">Imunisasi</th>
-      <th scope="col">Usia</th>
-    </tr>
-    <tr>
-      <td rowspan="2"></td>
-      <td scoope="col">Bulan</td>
-      <td scoope="col">Tahun</td>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">Hepatitis B</th>
-      <!-- <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td> -->
-    </tr>
-    <tr>
-      <th scope="row">Polio</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-    </tr>
-    <tr>
-      <th scope="row">BCG</th>
-      <td colspan="2">Larry the Bird</td>
-      <td>@twitter</td>
-    </tr>
-    <tr>
-      <th scope="row">DPT</th>
-      <td colspan="2">Larry the Bird</td>
-      <td>@twitter</td>
-    </tr>
-    <tr>
-      <th scope="row">Hib</th>
-      <td colspan="2">Larry the Bird</td>
-      <td>@twitter</td>
-    </tr>
-    <tr>
-      <th scope="row">PCV</th>
-      <td colspan="2">Larry the Bird</td>
-      <td>@twitter</td>
-    </tr>
-    <tr>
-      <th scope="row">Rotavirus</th>
-      <td colspan="2">Larry the Bird</td>
-      <td>@twitter</td>
-    </tr>
-    <tr>
-      <th scope="row">Influenza</th>
-      <td colspan="2">Larry the Bird</td>
-      <td>@twitter</td>
-    </tr>
-    <tr>
-      <th scope="row">Campak</th>
-      <td colspan="2">Larry the Bird</td>
-      <td>@twitter</td>
-    </tr>
-    <tr>
-      <th scope="row">MMR</th>
-      <td colspan="2">Larry the Bird</td>
-      <td>@twitter</td>
-    </tr>
-    <tr>
-      <th scope="row">Hepatitis A</th>
-      <td colspan="2">Larry the Bird</td>
-      <td>@twitter</td>
-    </tr>
-    <tr>
-      <th scope="row">Varisela</th>
-      <td colspan="2">Larry the Bird</td>
-      <td>@twitter</td>
-    </tr>
-    <tr>
-      <th scope="row">HPV</th>
-      <td colspan="2">Larry the Bird</td>
-      <td>@twitter</td>
-    </tr>
-    <tr>
-      <th scope="row">Japanese Enchepalitis</th>
-      <td colspan="2">Larry the Bird</td>
-      <td>@twitter</td>
-    </tr>
-    <tr>
-      <th scope="row">Dengue</th>
-      <td colspan="2">Larry the Bird</td>
-      <td>@twitter</td>
-    </tr>
-  </tbody>
-</table>
+        <th class="px-4 border border-blue-500 py-2 text-blue-600">3</th>
+        <th class="px-4 border border-blue-500 py-2 text-blue-600">5</th>
+        <th class="px-4 border border-blue-500 py-2 text-blue-600">6</th>
+        <th class="px-4 border border-blue-500 py-2 text-blue-600">7</th>
+        <th class="px-4 border border-blue-500 py-2 text-blue-600">8</th>
+        <th class="px-4 border border-blue-500 py-2 text-blue-600">9</th>
+        <th class="px-4 border border-blue-500 py-2 text-blue-600">10</th>
+        <th class="px-4 border border-blue-500 py-2 text-blue-600">12</th>
+        <th class="px-4 border border-blue-500 py-2 text-blue-600">18</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600">Hepatitis B</td>
+      </tr>
+      <tr>
+        <td class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600">Polio</td>
+      </tr>
+      <tr>
+        <td class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600">BCG</td>
+      </tr>
+      <tr>
+        <td class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600">DTP</td>
+      </tr>
+      <tr>
+        <td class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600">Hib</td>
+      </tr>
+      <tr>
+        <td class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600">PCV</td>
+      </tr>
+      <tr>
+        <td class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600">Rotavirus</td>
+      </tr>
+      <tr>
+        <td class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600">Influenza</td>
+      </tr>
+      <tr>
+        <td class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600">Campak</td>
+      </tr>
+      <tr>
+        <td class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600">MMR</td>
+      </tr>
+      <tr>
+        <td class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600">Tifoid</td>
+      </tr>
+      <tr>
+        <td class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600">Hepatitis A</td>
+      </tr>
+      <tr>
+        <td class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600">Varisela</td>
+      </tr>
+      <tr>
+        <td class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600">HPV</td>
+      </tr>
+      <tr>
+        <td class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600">Japanese encephalitis</td>
+      </tr>
+      <tr>
+        <td class="px-4 border border-blue-500 bg-blue-300 py-2 text-blue-600">Dengue</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
