--- a/Bintangku.WebUI/client/src/app/contents/memberAnak/anak/anak.component.html
+++ b/Bintangku.WebUI/client/src/app/contents/memberAnak/anak/anak.component.html
@@ -168,7 +168,7 @@
           <span class="text-blue-700 font-bold">Jenis Kelamin</span>
         </th>
         <td mat-cell *matCellDef="let element">
-          {{ element.jenisKelaminAnak }}
+          {{ element.jenisKelamin }}
         </td>
       </ng-container>
 
