--- a/Bintangku.WebUI/client/src/app/contents/errors/server-error/server-error.component.html
+++ b/Bintangku.WebUI/client/src/app/contents/errors/server-error/server-error.component.html
@@ -1,4 +1,20 @@
-<h4>
+<section class="my-6 relative h-full py-16">
+  <div class="xl:container mx-auto py-7 my-16 px-7">
+    <div class="text-center text-red-900">
+      <h5 class="error-text">500 <br> error</h5>
+      <div class="mat-typography">
+        <p>It's always time for a coffee break.</p>
+        <p>We should be back by the time you finish your coffee.</p>
+        <code>
+          <pre class="whitespace-pre-line">
+            {{error.details}}
+          </pre>
+        </code>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- <h4>
   Internal server error - refreshing the page will make the error disappear!
 </h4>
 <ng-container *ngIf="error">
@@ -22,4 +38,4 @@
   <code class="mt-5" style="background-color: whitesmoke">{{
     error.details
   }}</code>
-</ng-container>
+</ng-container> -->
