--- a/Bintangku.WebUI/client/src/app/contents/memberAnak/tabs/riwayat-kelahiran-tab/riwayat-kelahiran-tab.component.html
+++ b/Bintangku.WebUI/client/src/app/contents/memberAnak/tabs/riwayat-kelahiran-tab/riwayat-kelahiran-tab.component.html
@@ -1,32 +1,18 @@
-<table class="table" *ngIf="riwayatKelahiran">
-  <tbody>
-    <tr>
-      <th scope="col">Berat Lahir</th>
-      <th scope="col">
-        {{ riwayatKelahiran.beratBadan }}
-      </th>
-    </tr>
-    <tr>
-      <th scope="col">Panjang Lahir</th>
-      <th scope="col">
-        {{ riwayatKelahiran.panjangLahir }}
-      </th>
-    </tr>
-    <tr>
-      <th scope="col">Apgar Score</th>
-      <th scope="col">
-        {{ riwayatKelahiran.apgarScore }}
-      </th>
-    </tr>
-    <tr>
-      <th scope="col">Kelahiran Dibantu Oleh</th>
-      <th scope="col">
-        {{ riwayatKelahiran.kelahiranDibantuOleh }}
-      </th>
-    </tr>
-    <tr>
-      <th scope="col">Lain - Lain (Masalah Ketika Lahir</th>
-      <th scope="col">{{ riwayatKelahiran.lainLain }}</th>
-    </tr>
-  </tbody>
-</table>
+<div class="mat-typography">
+  <h2 class="text-center">Riwayat Kelahiran Anak</h2>
+  <hr>
+  <table class="table-fixed w-full">
+    <thead>
+      <tr>
+        <th class="w-1/2 px-4 py-2"></th>
+        <th class="w-1/2 px-4 py-2"></th>
+      </tr>
+    </thead>
+    <tbody *ngIf="riwayatKelahiran">
+      <tr *ngFor="let item of tableRow">
+        <td class="border px-4 py-2 font-medium">{{objRow[item]}}</td>
+        <td class="border px-4 py-2 font-medium">{{riwayatKelahiran[item]}} {{item === 'beratBadan' ? 'Kg' : item === 'panjangLahir' ? 'cm' : ''}}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
