--- a/Bintangku.WebUI/client/src/app/contents/memberAnak/tabs/riwayat-orang-tua-tab/riwayat-orang-tua-tab.component.html
+++ b/Bintangku.WebUI/client/src/app/contents/memberAnak/tabs/riwayat-orang-tua-tab/riwayat-orang-tua-tab.component.html
@@ -1,54 +1,18 @@
-<table class="table" *ngIf="riwayatOrangTua">
-  <tbody>
-    <tr>
-      <th scope="col">Nama Ayah</th>
-      <th scope="col">{{ riwayatOrangTua.namaAyah }}</th>
-    </tr>
-    <tr>
-      <th scope="col">Tanggal Lahir Ayah</th>
-      <th scope="col">
-        {{ riwayatOrangTua.tanggalLahirAyah | date: "MMMM d, y" }}
-      </th>
-    </tr>
-    <tr>
-      <th scope="col">Pekerjaan Ayah</th>
-      <th scope="col">
-        {{ riwayatOrangTua.pekerjaanAyah }}
-      </th>
-    </tr>
-    <tr>
-      <th scope="col">Nama Ibu</th>
-      <th scope="col">{{ riwayatOrangTua.namaIbu }}</th>
-    </tr>
-    <tr>
-      <th scope="col">Tanggal Lahir Ibu</th>
-      <th scope="col">
-        {{ riwayatOrangTua.tanggalLahirIbu | date: "MMMM d, y" }}
-      </th>
-    </tr>
-    <tr>
-      <th scope="col">Pekerjaan Ibu</th>
-      <th scope="col">
-        {{ riwayatOrangTua.pekerjaanIbu }}
-      </th>
-    </tr>
-    <tr>
-      <th scope="col">Penghasilan Orang Tua</th>
-      <th scope="col">
-        {{ riwayatOrangTua.penghasilanOrangTua }}
-      </th>
-    </tr>
-    <tr>
-      <th scope="col">Anggota Rumah Tangga</th>
-      <th scope="col">
-        {{ riwayatOrangTua.anggotaRumahTangga }}
-      </th>
-    </tr>
-    <tr>
-      <th scope="col">Tanda Tangan Orang Tua</th>
-      <th scope="col">
-        {{ riwayatOrangTua.tandaTanganPath }}
-      </th>
-    </tr>
-  </tbody>
-</table>
+<div class="mat-typography">
+  <h2 class="text-center">Riwayat Kelahiran Anak</h2>
+  <hr>
+  <table class="table-fixed w-full">
+    <thead>
+      <tr>
+        <th class="w-1/2 px-4 py-2"></th>
+        <th class="w-1/2 px-4 py-2"></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of tableRow">
+        <td class="border px-4 py-2 font-medium">{{objRow[item]}}</td>
+        <td class="border px-4 py-2 font-medium">{{riwayatOrangTua[item]}}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
