--- a/Bintangku.WebUI/client/src/app/layout/layout.component.html
+++ b/Bintangku.WebUI/client/src/app/layout/layout.component.html
@@ -9,4 +9,4 @@
   <app-header></app-header>
   <ng-content></ng-content>
 </div>
-<app-footer></app-footer>
+<app-footer *ngIf="errorsService.isError$ | async"></app-footer>
